--- a/src/template.html
+++ b/src/template.html
@@ -12,15 +12,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#141852" />
 
     <!-- Primary Meta Tags -->
-    <title>Happy Birthday to You!!!</title>
-    <meta name="title" content="Happy Birthday to You" />
-    <meta name="description" content="Wishing you a very Happy Birthday Dear" />
+    <title>Gerçeği öğren doğru bilgi nerden öğrenilir!!!</title>
+    <meta name="title" content="Gawad günü, uwu!!!" />
+    <meta name="description" content="hayatın acı gerçeği nedir, biz neyiz, neden varız" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Happy Birthday to you" />
+    <meta property="og:title" content="Gerçeği öğren doğru bilgi nerden öğrenilir!!!" />
     <meta
       property="og:description"
-      content="Wishing you a very Happy Birthday Dear"
+      content="hayatın acı gerçeği nedir, biz neyiz, neden varız"
     />
     <meta
       property="og:image"
@@ -132,29 +132,29 @@
     <div class="flash"></div>
 
     <div class="giftroom">
-      <p class="gift-text">Wow! That was something weird.</p>
-      <p class="gift-text">Hey look! There's a gift for you..</p>
-      <p class="gift-text">C'mon, let's open it and see what's in there!</p>
+      <p class="gift-text">Vay canına! Bu garip bir şeydi..</p>
+      <p class="gift-text">Hey bakın! Senin için bir hediye var..</p>
+      <p class="gift-text">Hadi, açıp içinde ne varmış görelim!</p>
     </div>
 
     <div class="hallway">
       <p class="hall-text">Hey!</p>
-      <p class="hall-text">Maybe it's a bit late to move in the hallway,</p>
-      <p class="hall-text">Things are creepy here...</p>
-      <p class="hall-text">I think we should go back inside.</p>
+      <p class="hall-text">Belki de koridora taşınmak için biraz geçtir,</p>
+      <p class="hall-text">Burada işler ürkütücü...</p>
+      <p class="hall-text">Bence içeri dönmeliyiz.</p>
     </div>
 
     <div class="empty-room">
-      <p class="room-text">Ok! Why is it so empty here?</p>
-      <p class="room-text">You know what, let's move outside.</p>
-      <p class="room-text">Let's see if anyone's over there...</p>
+      <p class="room-text">Tamam! Tamam! Burası neden bu kadar boş?</p>
+      <p class="room-text">Biliyor musun, hadi dışarı çıkalım.</p>
+      <p class="room-text">Bakalım orada kimse var mı...</p>
     </div>
 
     <div class="darkroom">
       <p class="bb-text">Hey!</p>
-      <p class="bb-text">Why is it so dark here?</p>
+      <p class="bb-text">Burası neden bu kadar karanlık?</p>
       <p class="bb-text">
-        <span class="name">{{^NAME}}</span>! Can you please switch on the lights?
+        <span class="name">{{^NAME}}</span>! Lütfen ışıkları açabilir misin?
       </p>
     </div>
 
