--- a/src/template.html
+++ b/src/template.html
@@ -12,15 +12,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#141852" />
 
     <!-- Primary Meta Tags -->
-    <title>Gerçeği öğren doğru bilgi nerden öğrenilir!!!</title>
-    <meta name="title" content="Gawad günü, uwu!!!" />
-    <meta name="description" content="hayatın acı gerçeği nedir, biz neyiz, neden varız" />
+    <title>Yaşamak hakkında herşey!!!</title>
+    <meta name="title" content="Yaşamak hakkında herşey!!!" />
+    <meta name="description" content="kısa animasyon ile yaşamanın ne olduğunu öğrenin" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Gerçeği öğren doğru bilgi nerden öğrenilir!!!" />
+    <meta property="og:title" content="Yaşamak hakkında herşey!!!" />
     <meta
       property="og:description"
-      content="hayatın acı gerçeği nedir, biz neyiz, neden varız"
+      content="kısa animasyon ile yaşamanın ne olduğunu öğrenin"
     />
     <meta
       property="og:image"
@@ -132,20 +132,20 @@
     <div class="flash"></div>
 
     <div class="giftroom">
-      <p class="gift-text">Vay canına! Bu garip bir şeydi..</p>
-      <p class="gift-text">Hey bakın! Senin için bir hediye var..</p>
-      <p class="gift-text">Hadi, açıp içinde ne varmış görelim!</p>
+      <p class="gift-text">Vay canına! Bu çok garip bir şeydi.</p>
+      <p class="gift-text">Hey bak! Sana bir hediye var..</p>
+      <p class="gift-text">Hadi açalım bakalım içinde neler var!</p>
     </div>
 
     <div class="hallway">
       <p class="hall-text">Hey!</p>
-      <p class="hall-text">Belki de koridora taşınmak için biraz geçtir,</p>
-      <p class="hall-text">Burada işler ürkütücü...</p>
-      <p class="hall-text">Bence içeri dönmeliyiz.</p>
+      <p class="hall-text">Belki koridorda dolaşmak için biraz geçtir,</p>
+      <p class="hall-text">Burada şeyler ürkütücü...</p>
+      <p class="hall-text">Sanırım içeri geri dönmeliyiz.</p>
     </div>
 
     <div class="empty-room">
-      <p class="room-text">Tamam! Tamam! Burası neden bu kadar boş?</p>
+      <p class="room-text">Tamam! Burası neden bu kadar boş?</p>
       <p class="room-text">Biliyor musun, hadi dışarı çıkalım.</p>
       <p class="room-text">Bakalım orada kimse var mı...</p>
     </div>
@@ -154,7 +154,7 @@
       <p class="bb-text">Hey!</p>
       <p class="bb-text">Burası neden bu kadar karanlık?</p>
       <p class="bb-text">
-        <span class="name">{{^NAME}}</span>! Lütfen ışıkları açabilir misin?
+        <span class="name">{{^NAME}}</span>! ışığı açabilir misin?
       </p>
     </div>
 
